; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/winmm/extr_lolvldrv.c_MMDRV_Init.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/winmm/extr_lolvldrv.c_MMDRV_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NT_MME_DRIVERS_KEY = common dso_local global i32 0, align 4
@NT_MME_DRIVERS32_KEY = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@WINE_DEFAULT_WINMM_DRIVER = common dso_local global i8* null, align 8
@WINE_DEFAULT_WINMM_MAPPER = common dso_local global i8* null, align 8
@WINE_DEFAULT_WINMM_MIDI = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MMDRV_Init() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @NT_MME_DRIVERS_KEY, align 4
  %3 = call i64 @LoadRegistryMMEDrivers(i32 %2)
  %4 = load i32, i32* %1, align 4
  %5 = sext i32 %4 to i64
  %6 = add nsw i64 %5, %3
  %7 = trunc i64 %6 to i32
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* @NT_MME_DRIVERS32_KEY, align 4
  %9 = call i64 @LoadRegistryMMEDrivers(i32 %8)
  %10 = load i32, i32* %1, align 4
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %11, %9
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* @TRUE, align 4
  ret i32 %14
}

declare dso_local i64 @LoadRegistryMMEDrivers(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
